# reference

./: .gitignore  404.html  CONTRIBUTING.md  Cargo.toml  README.md  abi.html  appendices.html  attributes.html  behavior-considered-undefined.html  behavior-not-considered-unsafe.html  book.toml  comments.html  conditional-compilation.html  const_eval.html  crates-and-source-files.html  destructors.html  dynamically-sized-types.html  expressions.html  glossary.html  grammar.html  identifiers.html  index.html  influences.html  inline-assembly.html  input-format.html  interior-mutability.html  introduction.html  items.html  keywords.html  lexical-structure.html  lifetime-elision.html  linkage.html  macro-ambiguity.html  macros-by-example.html  macros.html  memory-allocation-and-lifetime.html  memory-model.html  names.html  notation.html  panic.html  (+29 more)
.cargo/: config.toml
attributes/: codegen.html  debugger.html  derive.html  diagnostics.html  limits.html  testing.html  type_system.html
contrib/: book.toml
css/: chrome-03ed7f09.css  chrome-3111ccdb.css  chrome-ad662a8e.css
docs/: grammar.md
expressions/: array-expr.html  await-expr.html  block-expr.html  call-expr.html  closure-expr.html  field-expr.html  grouped-expr.html  if-expr.html  literal-expr.html  loop-expr.html  match-expr.html  method-call-expr.html  operator-expr.html  path-expr.html  range-expr.html  return-expr.html  struct-expr.html  tuple-expr.html  underscore-expr.html
items/: associated-items.html  constant-items.html  enumerations.html  extern-crates.html  external-blocks.html  functions.html  generics.html  implementations.html  modules.html  static-items.html  structs.html  traits.html  type-aliases.html  unions.html  use-declarations.html
mdbook-spec/: Cargo.toml
names/: name-resolution.html  namespaces.html  preludes.html  scopes.html
pr-1234/: 404.html  behavior-considered-undefined.html  conditional-compilation.html  destructors.html  inline-assembly.html  interior-mutability.html  introduction.html  print.html  procedural-macros.html  runtime.html  searchindex.js  searchindex.json  special-types-and-traits.html  unsafe-keyword.html  visibility-and-privacy.html
pr-2/: crates-and-source-files.html  expressions.html  index.html  input-format.html  print.html  searchindex.js  searchindex.json  type-coercions.html  type-layout.html
src/: SUMMARY.md  abi.md  attributes.md  behavior-considered-undefined.md  comments.md  conditional-compilation.md  crates-and-source-files.md  divergence.md  expressions.md  glossary.md  identifiers.md  inline-assembly.md  input-format.md  introduction.md  items.md  keywords.md  linkage.md  macros-by-example.md  macros.md  notation.md  paths.md  patterns.md  scope.md  shebang.md  (+7 more)
tools/: Cargo.toml
tools/diagnostics/src/: lib.rs
tools/grammar-check/: Cargo.toml  README.md
tools/grammar-check/src/: main.rs  permute.rs  permute2.rs  pm2.rs  rustc.rs  rustc_lexer.rs  test_cases.rs
tools/grammar-check/src/commands/: compare.rs  count.rs  lex_compare.rs  print_grammar.rs  split_check.rs  tokenize.rs  tree.rs
tools/grammar-check/src/tools/: pm2.rs  rustc.rs  rustc_lexer.rs
tools/grammar/src/: display.rs  lib.rs  parser.rs
tools/lexer/: Cargo.toml
tools/lexer/src/: lib.rs  main.rs
tools/mdbook-spec/src/: grammar.rs  lib.rs  std_links.rs
tools/mdbook-spec/src/grammar/: render_markdown.rs  render_railroad.rs
tools/parser/: Cargo.toml  README.md
tools/parser/src/: ast.rs  coverage.rs  lexer.rs  lib.rs  main.rs  parser.rs  tree.rs
tools/xtask/src/: main.rs
(+129 files in other folders)
