[workspace]
members = [
    "tools/*",
]
exclude = [
    "linkchecker"
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
clap = "4.5.53"
diagnostics = { path = "tools/diagnostics" }
grammar = { path = "tools/grammar" }
lexer = { path = "tools/lexer" }
pathdiff =  "0.2.3"
regex = "1.12.2"
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
unicode-ident = "1.0.22"
walkdir = "2.5.0"
