[package]
name = "grammar-check"
edition.workspace = true
license.workspace = true

[dependencies]
clap.workspace = true
ctrlc = "3.5.1"
indicatif = "0.18.3"
lexer.workspace = true
proc-macro2 = { version = "1.0.103", features = ["span-locations"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
walkdir.workspace = true

[package.metadata.rust-analyzer]
rustc_private = true
